--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ dj-database-url==0.5.0
 Django==2.0.12
 django-cors-headers==2.2.0
 djangorestframework==3.9.1
+djangorestframework-jwt==1.11.0
 gunicorn==19.7.1
 psycopg2==2.7.4
+PyJWT==1.6.4
 python-decouple==3.1
 pytz==2018.3
